feat: manage resource type catalog via new v2 API
